Remove the unitycatalog-common
Signed-off-by: Zheng Hu <openinx@gmail.com>